force-app/main/default/objects/IPIA_Record__c/IPIA_Record__c.object-meta.xml
<CustomObject>
    <label>IPIA</label>
    <nameField>
        <displayFormat>IPIA-{000000000}</displayFormat>
        <label>IPIA ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPIAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>