force-app/main/default/objects/IPIA_Record__c/fields/Contact_Recid__c.field-meta.xml
<CustomField>
    <fullName>Contact_Recid__c</fullName>
    <label>Forrester Contact RecID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>