force-app/main/default/objects/IPIA_Record__c/fields/DocusignEnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>DocusignEnvelopeId__c</fullName>
    <label>Docusign Envelope Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>