force-app/main/default/objects/IPIA_Record__c/fields/DocusignTemplate__c.field-meta.xml
<CustomField>
    <fullName>DocusignTemplate__c</fullName>
    <label>Docusign Template</label>
    <length>64</length>
    <type>Text</type>
</CustomField>