force-app/main/default/objects/IPIA_Record__c/fields/FormName__c.field-meta.xml
<CustomField>
    <fullName>FormName__c</fullName>
    <label>Form Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>