force-app/main/default/objects/IPIA_Record__c/fields/FormNameType__c.field-meta.xml
<CustomField>
    <fullName>FormNameType__c</fullName>
    <description>If IPIA_Type__c is not populated, use FormName__c, otherwise use IPIA_Type__c. This field is mainly to be used on standard Salesforce lists.</description>
    <formula>IF(ISBLANK(IPIA_Type__c), FormName__c, HYPERLINK(&apos;/lightning/r/&apos; &amp; IPIA_Type__c &amp; &apos;/view&apos;, IPIA_Type__r.Name &amp; IF(IPIA_Type__r.Exemption__c, &apos; (Exemption)&apos;, &apos;&apos;), &apos;_self&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Type</label>
    <type>Text</type>
</CustomField>