force-app/main/default/objects/IPIA_Record__c/fields/IPIA_Type__c.field-meta.xml
<CustomField>
    <fullName>IPIA_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPIA Type</label>
    <referenceTo>IPIA_Type__c</referenceTo>
    <relationshipLabel>IPIAs</relationshipLabel>
    <relationshipName>IPIA_Records</relationshipName>
    <type>Lookup</type>
</CustomField>