force-app/main/default/objects/IPIA_Record__c/fields/IPIA_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>IPIA_Type_Status__c</fullName>
    <formula>TEXT(IPIA_Type__r.Status__c)</formula>
    <label>IPIA Type Status</label>
    <type>Text</type>
</CustomField>