force-app/main/default/objects/IPIA_Record__c/fields/MitId__c.field-meta.xml
<CustomField>
    <fullName>MitId__c</fullName>
    <label>MIT ID</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>