force-app/main/default/objects/IPIA_Record__c/fields/SignDatetime__c.field-meta.xml
<CustomField>
    <fullName>SignDatetime__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>