force-app/main/default/objects/IPIA_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MitId__c</columns>
    <columns>Contact_Recid__c</columns>
    <columns>FormNameType__c</columns>
    <columns>IPIA_Type_Status__c</columns>
    <columns>SignDatetime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All IPIAs</label>
</ListView>